feat: add roles table

--- a/lib/sass/lesli/bulma/loader.scss
+++ b/lib/sass/lesli/bulma/loader.scss
@@ -51,12 +51,15 @@ $navbar-background-color: transparent;
 @import "bulma/sass/helpers/all";
 
 @import "bulma/sass/form/all";
+
 @import "bulma/sass/components/tabs";
+@import "bulma/sass/components/pagination";
 
 @import "bulma/sass/elements/container";
 @import "bulma/sass/elements/button";
 @import "bulma/sass/elements/image";
 @import "bulma/sass/elements/title";
+@import "bulma/sass/elements/table";
 
 
 
