feat: enable user through api

--- a/lib/sass/lesli/elements/form.scss
+++ b/lib/sass/lesli/elements/form.scss
@@ -36,7 +36,8 @@ Building a better future, one line of code at a time.
     fieldset {
         padding: 1rem;
         border-radius: 5px;
-        border: 1px solid #ccc;
+        //border: 1px solid #ccc;
         background-color: #fff;
+        box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     }
 }
