--- a/lib/sass/lesli/elements/table.scss
+++ b/lib/sass/lesli/elements/table.scss
@@ -101,6 +101,7 @@ table.lesli-table {
         .dropdown {
             .button {
                 background-color: transparent;
+                border: none;
             }
             .dropdown-content {
                 padding: 0;
