--- a/lib/sass/lesli/bulma/loader.scss
+++ b/lib/sass/lesli/bulma/loader.scss
@@ -53,6 +53,7 @@ $navbar-background-color: transparent;
 @import "bulma/sass/form/all";
 
 @import "bulma/sass/components/tabs";
+@import "bulma/sass/components/dropdown";
 @import "bulma/sass/components/pagination";
 
 @import "bulma/sass/elements/container";
