--- a/app/views/lesli/partials/_application-public-javascript.html.erb
+++ b/app/views/lesli/partials/_application-public-javascript.html.erb
@@ -32,9 +32,9 @@ Building a better future, one line of code at a time.
 =end
 %>
 
-<% translation_timestamp = File.mtime(Rails.root.join("public", "javascripts", "translations.js")).to_i %>
-<%= javascript_include_tag "i18n", skip_pipeline: true %>
-<%= javascript_include_tag "translations?#{translation_timestamp}", skip_pipeline: true %>
+<%# translation_timestamp = File.mtime(Rails.root.join("public", "javascripts", "translations.js")).to_i %>
+<%#= javascript_include_tag "i18n", skip_pipeline: true %>
+<%#= javascript_include_tag "translations?#{translation_timestamp}", skip_pipeline: true %>
 
 
 <%# Set language for JavaScripts apps %>
@@ -45,7 +45,14 @@ Building a better future, one line of code at a time.
 <% is_devise = controller_path.split('/')[0] == "users" %>
 
 <%# Load specific javascript files for devise actions (login,register,etc) %>
-<%= javascript_include_tag(controller_path) if is_devise %>
+<%#= javascript_include_tag(controller_path) if is_devise %>
 
 <%# Load standard files %>
-<%= javascript_include_tag(application_javascript_path()) unless is_devise %> 
+<%#= javascript_include_tag(application_javascript_path()) unless is_devise %> 
+
+
+
+<%= javascript_include_tag("lesli/sessions") if is_devise %>
+<%= lesli_application_javascript_path %>
+<br />
+<%= controller_path %>
