--- a/app/assets/stylesheets/lesli/users/devise.scss
+++ b/app/assets/stylesheets/lesli/users/devise.scss
@@ -1,5 +1,4 @@
-<%
-=begin
+/*
 
 Lesli
 
@@ -18,19 +17,16 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with this program. If not, see http://www.gnu.org/licenses/.
 
-Lesli · Ruby on Rails SaaS development platform.
+Lesli · Your Smart Business Assistant. 
 
 Made with ♥ by https://www.lesli.tech
 Building a better future, one line of code at a time.
 
 @contact  hello@lesli.tech
-@website  https://www.lesli.tech
+@website  https://lesli.tech
 @license  GPLv3 http://www.gnu.org/licenses/gpl-3.0.en.html
 
-// · ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~
-// · 
-=end
-%>
+// · ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~
+// ·
 
-<%#= stylesheet_link_tag(controller_path, media: "all") %>
-<%= stylesheet_link_tag("lesli/users/sessions", media: "all") %>
+*/
