--- a/lib/assets/stylesheets/lesli/pages/auth.scss
+++ b/lib/assets/stylesheets/lesli/pages/auth.scss
@@ -33,7 +33,7 @@ Building a better future, one line of code at a time.
 
 
 // ·
-@import "templates/public";
+@import "lesli/templates/public";
 
 
 // ·
