feat: new structure for public & devise assets

--- a/app/views/lesli/layouts/application-devise.html.erb
+++ b/app/views/lesli/layouts/application-devise.html.erb
@@ -1,4 +1,5 @@
-/*
+<%
+=begin
 
 Lesli
 
@@ -27,10 +28,31 @@ Building a better future, one line of code at a time.
 @license  GPLv3 http://www.gnu.org/licenses/gpl-3.0.en.html
 
 // · ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~
-// ·  
+// · 
+=end
+%>
 
-*/
-
-
-// ·
-@import "lesli/pages/auth";
+<!DOCTYPE html>
+<html>
+<head>
+    <%= render partial: "lesli/partials/application-head" %>
+    <%#= render partial: "lesli/partials/application-data" %>
+    <%= render partial: "lesli/partials/application-public-scss" %>
+    <%= yield :application_custom_assets %>
+    <%# Disable back button in browser after Logout using JavaScript %>
+    <% if flash[:logout] == true %>
+        <script>
+            history.pushState(null, null, null);
+            window.addEventListener('popstate', function () {
+                history.pushState(null, null, null);
+            });
+        </script>
+    <% end %>
+</head>
+<body class="<%#= application_body_class() %>">
+    <%#= yield :application_public_custom_header %>
+    <%= yield %>
+    <%= render partial: "lesli/partials/application-public-javascript" %>
+    <%#= render partial: "lesli/partials/application-analytics" %>
+</body>
+</html>
