feat: add vault

--- a/app/views/lesli/partials/_application-lesli-engines.html.erb
+++ b/app/views/lesli/partials/_application-lesli-engines.html.erb
@@ -70,6 +70,7 @@ Building a better future, one line of code at a time.
 
     <%# Security & privacy %>
     <%= navigation_engine_audit %>
+    <%= navigation_engine_vault %>
 
     <%# Integrations %>
     <%= navigation_engine_babel %>
