feat: enable current_user

--- a/app/views/lesli/partials/_engine-navigation.html.erb
+++ b/app/views/lesli/partials/_engine-navigation.html.erb
@@ -35,8 +35,8 @@ Building a better future, one line of code at a time.
 <%= navigation_item(lesli.account_path, "Account", "ri-building-4-line"); %>
 <%= navigation_item(lesli.users_path, "Users", "ri-user-line"); %>
 
-<%= navigation_item(lesli.account_path, "Localization", "ri-time-line"); %>
-<%= navigation_item(lesli.account_path, "Theming", "ri-paint-brush-line"); %>
+<%#= navigation_item(lesli.account_path, "Localization", "ri-time-line"); %>
+<%#= navigation_item(lesli.account_path, "Theming", "ri-paint-brush-line"); %>
 
 <%#= navigation_item(lesli.account_path, I18n.t("core.shared.sidebar_nav_account"), "ri-building-4-line"); %>
 <%#= navigation_item(lesli.users_path, I18n.t("core.shared.sidebar_nav_users"), "ri-user-line"); %>
