--- a/app/views/lesli/partials/_application-lesli-scss.html.erb
+++ b/app/views/lesli/partials/_application-lesli-scss.html.erb
@@ -40,7 +40,7 @@ Building a better future, one line of code at a time.
 # Defining color customization 
 # colors will be override with the ones defined in the database if custom colors exists
 # if there is no custom colors defined, the var() function will return the lesli colors
-@colors = @lesli[:customization][:colors] || {}
+@colors = @lesli.dig(:customization, :colors) || {}
 %>
 
 
