feat: enable user authentication

--- a/app/views/lesli/partials/_application-lesli-engines.html.erb
+++ b/app/views/lesli/partials/_application-lesli-engines.html.erb
@@ -36,7 +36,7 @@ Building a better future, one line of code at a time.
 <application-component-engines>
 
     <%# Core %>
-    <%= navigation_engine_lesli %>
+    <%= navigation_engine_admin %>
 
     <%# Administration %>
     <%= navigation_engine_team %>
