feat: add content component styles

--- a/lib/sass/lesli/templates/application.scss
+++ b/lib/sass/lesli/templates/application.scss
@@ -93,6 +93,7 @@ Building a better future, one line of code at a time.
 // · Lesli vue components
 @import "lesli/elements/autocomplete";
 @import "lesli/elements/avatar";
+@import "lesli/elements/content";
 @import "lesli/elements/empty";
 @import "lesli/elements/file-uploader";
 @import "lesli/elements/gallery";
