--- a/lib/sass/lesli/elements/content.scss
+++ b/lib/sass/lesli/elements/content.scss
@@ -17,7 +17,7 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with this program. If not, see http://www.gnu.org/licenses/.
 
-Lesli · Ruby on Rails SaaS development platform.
+Lesli · Ruby on Rails SaaS Development Framework.
 
 Made with ♥ by https://www.lesli.tech
 Building a better future, one line of code at a time.
@@ -27,22 +27,11 @@ Building a better future, one line of code at a time.
 @license  GPLv3 http://www.gnu.org/licenses/gpl-3.0.en.html
 
 // · ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~
-// ·  
+// · 
 */
 
-.lesli-avatar {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    background-color: lesli-css-color(silver, 100);
-    > img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        border-radius: 50%;
-    }
-    > span {
-        color: lesli-css-color(silver, 700);
-    }
+div.lesli-element-content {
+    border-radius: .6rem;
+    box-shadow: $lesli-box-shadow;
+    background-color: lesli-css-color(solid, white);
 }
