--- a/lib/sass/lesli/templates/dashboards.scss
+++ b/lib/sass/lesli/templates/dashboards.scss
@@ -17,7 +17,7 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with this program. If not, see http://www.gnu.org/licenses/.
 
-Lesli · Ruby on Rails SaaS development platform.
+Lesli · Ruby on Rails SaaS Development Framework.
 
 Made with ♥ by https://www.lesli.tech
 Building a better future, one line of code at a time.
@@ -27,6 +27,19 @@ Building a better future, one line of code at a time.
 @license  GPLv3 http://www.gnu.org/licenses/gpl-3.0.en.html
 
 // · ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~
-// ·  
-
+// · 
 */
+
+
+// · 
+@import "lesli-css";
+
+
+// · Configuration & variables
+@import "lesli/settings/variables";
+
+
+// · 
+aside.lesli-application-sidebar {
+    display: none !important;
+}
