--- a/lib/sass/lesli/layouts/application-header.scss
+++ b/lib/sass/lesli/layouts/application-header.scss
@@ -139,6 +139,11 @@ header.lesli-application-header {
 
                 .dropdown-content {
                     width: 100%;
+                    padding: 0;
+
+                    hr.dropdown-divider {
+                        margin: 0;
+                    }
                 }
             }
 
