--- a/lib/sass/lesli/templates/public.scss
+++ b/lib/sass/lesli/templates/public.scss
@@ -45,7 +45,7 @@ Building a better future, one line of code at a time.
 
 
 // · Font families and icons
-@import "lesli/fonts/mdicons";
+@import "lesli/fonts/remixicons";
 @import "lesli/fonts/families";
 
 
