feat: reorder global rake tasks

--- a/lib/sass/lesli/templates/dashboards.scss
+++ b/lib/sass/lesli/templates/dashboards.scss
@@ -43,3 +43,11 @@ Building a better future, one line of code at a time.
 aside.lesli-application-sidebar {
     display: none !important;
 }
+
+
+// · 
+.lesli-application-container {
+    // width: 90%;
+    // max-width: 1600px !important;
+    // margin: 0 auto;
+}
