--- a/lib/sass/lesli/layouts/application-container.scss
+++ b/lib/sass/lesli/layouts/application-container.scss
@@ -29,3 +29,7 @@ Building a better future, one line of code at a time.
 // · ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~
 // · 
 */
+
+section.lesli-application-container {
+    padding: 1rem 0;
+}
