feat: add global padding to the main container

--- a/lib/sass/lesli/layouts/application-container.scss
+++ b/lib/sass/lesli/layouts/application-container.scss
@@ -31,5 +31,5 @@ Building a better future, one line of code at a time.
 */
 
 section.lesli-application-container {
-    padding: 1rem 0;
+    padding: 1rem;
 }
