--- a/lib/sass/lesli/fonts/families.scss
+++ b/lib/sass/lesli/fonts/families.scss
@@ -33,15 +33,15 @@ Building a better future, one line of code at a time.
 
 // · Font family for titles
 @font-face {
-    font-family: "Montserrat";
-    src: font-url("lesli/Montserrat/Montserrat-Variable.ttf") format("truetype");
+    font-family: "Domine";
+    src: font-url("lesli/Domine/Domine-VariableFont_wght.ttf") format("truetype");
     font-display: swap;
 }
 
 
 // · Font family for the body
 @font-face {
-    font-family: "Open Sans";
+    font-family: "OpenSans";
     src: font-url("lesli/OpenSans/OpenSans-Variable.ttf") format("truetype");
     font-display: swap;
 }
