--- a/lib/sass/lesli/templates/public.scss
+++ b/lib/sass/lesli/templates/public.scss
@@ -28,7 +28,6 @@ Building a better future, one line of code at a time.
 
 // · ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~
 // ·  
-
 */
 
 
@@ -61,7 +60,7 @@ body {
 
 // · headings and links
 h1, h2, h3, h4, h5, h6, a {
-    font-family: "Montserrat", $family-primary;
+    font-family: "Domine", $family-primary;
 }
 
 
