--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,76 @@
-<h2>Forgot your password?</h2>
+<%
+=begin
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+Lesli
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+Copyright (c) 2023, Lesli Technologies, S. A.
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program. If not, see http://www.gnu.org/licenses/.
+
+Lesli · Ruby on Rails SaaS Development Framework.
+
+Made with ♥ by https://www.lesli.tech
+Building a better future, one line of code at a time.
+
+@contact  hello@lesli.tech
+@website  https://www.lesli.tech
+@license  GPLv3 http://www.gnu.org/licenses/gpl-3.0.en.html
+
+// · ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~
+// · 
+=end
+%>
+
+
+<%= render("lesli/wrappers/application-devise-simple", 
+    title: "Forgot your password?") do %>
+
+    <form class="has-text-centered" @submit="postPasswordNew" method="post">
+
+        <div class="field mb-4">
+            <p class="label mb-2">
+                Enter your email address you use in Lesli. 
+                We'll send instructions for setting a new password to your email.
+            </p>
+            <p v-if="notification.show" :class="[notification.type, 'is-size-5', 'mt-2']">
+                {{ notification.message }}
+            </p>
+            <div class="control has-icons-left has-icons-right">
+                <input 
+                    class="input" 
+                    type="email"
+                    v-model="sign_in.email"
+                    required="true"
+                    name="user_email"
+                    placeholder="email"
+                />
+                <span :class="['icon', 'is-small', 'is-left', `has-text-${notification.type}`]">
+                    <i class="ri-mail-lock-line"></i>
+                </span>
+            </div>
+        </div>
+
+        <div class="field">
+            <div class="control">
+                <button 
+                    type="submit" 
+                    :class="['button', 'is-primary', 'mb-2', {'is-loading':loading}]">
+                    Send password reset instructions
+                </button>
+            </div>
+        </div>
+    </form>
+    
+    <%= render("devise/shared/links", magic_link:true, otp:true, login:true) %>
 <% end %>
-
-<%= render "devise/shared/links" %>
