--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -33,17 +33,7 @@ Building a better future, one line of code at a time.
 %>
 
 
-<%= render("lesli/wrappers/application-auth") do %>
-
-    <%# Logo container %>
-    <div class="logo has-text-centered mb-5">
-        <%= image_tag(
-            "#{lesli_instance_code}/brand/app-auth.svg",    # dynamic path to the instance main logo
-            :class => "#{lesli_instance_code}-logo",        # dynamic class according to the instance
-            :alt => "Main logo") 
-        %>
-        <h1 class="has-text-primary">Create account to discover Lesli</h1>
-    </div>
+<%= render("lesli/wrappers/application-devise", title:"Create account to discover Lesli") do %>
 
     <%# Log in form %>
     <form @submit.prevent="postRegistration" method="post">
