--- a/lib/sass/lesli/pages/devise.scss
+++ b/lib/sass/lesli/pages/devise.scss
@@ -38,7 +38,7 @@ Building a better future, one line of code at a time.
 // ·
 h1 {
     line-height: 33px;
-    font-weight: 800;
+    font-weight: 900;
     font-size: 24px;
 }
 
@@ -82,11 +82,9 @@ body {
         form {
 
             label {
-                font-family: "Montserrat";
-                font-weight: 500;
+                font-weight: 400;
                 font-size: 15px;
                 line-height: 150%;
-                color: #333;
             }
             input {
                 border-radius: 6px;
@@ -125,33 +123,15 @@ body {
                 }
             }
             span {
-                font-family: "Exo";
+                font-family: "Domine";
                 font-weight: 500;
                 font-size: 14px;
                 //color: lesli-css-color(lesli, navy);
             }
         }
 
-        .links {
-            a {
-                width: 100%;
-                display: flex;
-                flex-grow: 1;
-                padding: .8rem 0;
-                &:not(:last-child) {
-                    border-bottom: 1px solid lesli-css-color(silver, 300);
-                }
-            }
-            span {
-                font-family: "Exo";
-                font-weight: 500;
-                font-size: 14px;
-                //color: red; //lesli-css-color(lesli, navy);
-            }
-        }
-
         .terms {
-            font-family: "Exo";
+            font-family: "Domine";
             font-weight: 400;
             font-size: 12px;
             line-height: 19px;
@@ -170,7 +150,6 @@ body {
                 line-height: 18px;
             }
         }
-
     }
 
     .column.is-hidden-touch {
