--- a/lib/sass/lesli/templates/application.scss
+++ b/lib/sass/lesli/templates/application.scss
@@ -135,7 +135,7 @@ body {
 
 // · titles
 h1, h2, h3, h4, h5, h6 {
-    font-family: "Montserrat", $family-primary;
+    font-family: "Domine", $family-primary;
 }
 
 
