feat: update vendor assets

--- a/lib/sass/lesli/templates/application.scss
+++ b/lib/sass/lesli/templates/application.scss
@@ -113,6 +113,9 @@ Building a better future, one line of code at a time.
 @import "lesli/elements/card";
 
 
+@import "flag-icon";
+
+
 html,
 body {
     color: var(--lesli-font-color);
