--- a/app/views/lesli/partials/_application-lesli-header.html.erb
+++ b/app/views/lesli/partials/_application-lesli-header.html.erb
@@ -32,48 +32,34 @@ Building a better future, one line of code at a time.
 =end
 %>
 
-<%# check if custom header partial exists in the builder engine %>
-<% custom_header_path = "layouts/#{lesli_engine.dig(:code)}/partials/application-header" %>
+<lesli-application-header 
+    <%= "show-bell" if defined?(CloudBell) %>
+    <%= "show-announcements" if defined?(CloudBell) %>
+    <%= "show-focus" if defined?(CloudFocus) %>
+    <%= "show-tickets" if defined?(CloudHelp) %>
+    :show-engines="true">
 
-<%# validate the path to be sure the partial exists when trying to render it %>
-<% custom_header_exists = lookup_context.exists?(custom_header_path, nil, true) %>
-
-<%# render custom header from builder engine if exists %>
-<%= render( partial: custom_header_path) if custom_header_exists %>
-
-<%# if custom header does not exists, use the main from core %>
-<% unless custom_header_exists %>
-    <lesli-application-header 
-        <%= "show-bell" if defined?(CloudBell) %>
-        <%= "show-announcements" if defined?(CloudBell) %>
-        <%= "show-focus" if defined?(CloudFocus) %>
-        <%= "show-tickets" if defined?(CloudHelp) %>
-        :show-engines="true">
-
-        <%# language selector %>
-        <% if I18n.available_locales.length > 1 && params[:controller] == 'profiles' %>
-            <div class="dropdown is-hoverable header-language-selector">
-                <div class="dropdown-trigger">
-                    <button class="button" aria-haspopup="true" aria-controls="dropdown-menu">
-                        <span class="icon has-text-grey-light">
-                            <%= flag_icon(language_flag(I18n.locale)) %>
-                        </span>
-                    </button>
-                </div>
-                <div class="dropdown-menu" id="dropdown-menu" role="menu">
-                    <div class="dropdown-content">
-                        <% I18n.available_locales.each do |locale| %>
-                            <% next if locale == I18n.locale %>
-                            <%= link_to language_url(locale), { :class => "dropdown-item" } do %>
-                                <span class="icon has-text-grey-light">
-                                    <%= flag_icon(language_flag(locale)) %>
-                                </span>
-                                <span><%= language_name(locale) %></span>
-                            <% end %>
+    <%# language selector %>
+    <% if I18n.available_locales.length > 1 %>
+        <div class="dropdown is-hoverable header-language-selector">
+            <div class="dropdown-trigger">
+                <span class="icon has-text-link">
+                    <%= flag_icon(language_flag(locale)) %>
+                </span>
+            </div>
+            <div class="dropdown-menu" id="dropdown-menu-locale" role="menu">
+                <div class="dropdown-content">
+                    <% I18n.available_locales.each do |locale| %>
+                        <% next if locale == I18n.locale %>
+                        <%= link_to language_url(locale), { :class => "dropdown-item" } do %>
+                            <span class="icon has-text-grey-light">
+                                <%= flag_icon(language_flag(locale)) %>
+                            </span>
+                            <span><%= language_name(locale) %></span>
                         <% end %>
-                    </div>
+                    <% end %>
                 </div>
             </div>
-        <% end %>
-    </lesli-application-header >
-<% end %>
+        </div>
+    <% end %>
+</lesli-application-header>
